# syrk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
benchmarks/: bench_syrk.py
syrk/: __init__.py  core.py
syrk/backends/: __init__.py  triton_backend.py
