[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syrk"
version = "0.1.0"
description = "A multi-backend SYRK (Symmetric Rank-K Update) implementation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SYRK Contributors"}
]
keywords = ["syrk", "linear-algebra", "triton", "cuda", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
triton = [
    "triton>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "syrk[triton,dev]",
]

[project.urls]
Homepage = "https://github.com/pysyrk/syrk"
Documentation = "https://github.com/pysyrk/syrk#readme"
Repository = "https://github.com/pysyrk/syrk"

[tool.setuptools.packages.find]
where = ["."]
include = ["syrk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

